Fix Small CSS Bugs
Namely, stripe colors not showing on `prefers-color-scheme: light`and typed buttons not having a background color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --stripe-blue-rgb: 47, 76, 121;
+  --stripe-orange-rgb: 224, 98, 54;
+  --stripe-red-rgb: 200, 35, 55;
+  --stripe-yellow-rgb: 215, 171, 97;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -59,7 +63,7 @@ ol, ul, menu {
   padding-left: 2em;
 }
 
-button {
+button, button:is([type='button'], [type='reset'], [type='submit']){
   background-color: rgb(var(--stripe-blue-rgb));
   border: none;
   color: white;
